# worm

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README  index.html  install_manifest.txt
cmake/: FindCtemplate.cmake  FindMySQL.cmake  FindSqlite3.cmake
doc/: TODO  datatypes.txt  design.notes
doc/html/: annotated.html  class__declaration_8tpl_8varnames_8h.html  class__declaration_8tpl_8varnames_8h_source.html  class_w_sql_1_1_w_mysql_driver-members.html  class_w_sql_1_1_w_mysql_driver.html  class_w_sql_1_1_w_mysql_result-members.html  class_w_sql_1_1_w_mysql_result.html  class_w_sql_1_1_w_sql_column-members.html  class_w_sql_1_1_w_sql_column.html  class_w_sql_1_1_w_sql_dabatase_manager-members.html  class_w_sql_1_1_w_sql_dabatase_manager.html  class_w_sql_1_1_w_sql_database-members.html  class_w_sql_1_1_w_sql_database.html  class_w_sql_1_1_w_sql_datum-members.html  class_w_sql_1_1_w_sql_datum.html  class_w_sql_1_1_w_sql_driver-members.html  class_w_sql_1_1_w_sql_driver.html  class_w_sql_1_1_w_sql_driver_factory-members.html  class_w_sql_1_1_w_sql_driver_factory.html  class_w_sql_1_1_w_sql_error-members.html  class_w_sql_1_1_w_sql_error.html  class_w_sql_1_1_w_sql_field-members.html  class_w_sql_1_1_w_sql_field.html  class_w_sql_1_1_w_sql_foreign_key-members.html  class_w_sql_1_1_w_sql_foreign_key.html  class_w_sql_1_1_w_sql_record-members.html  class_w_sql_1_1_w_sql_record.html  class_w_sql_1_1_w_sql_referenced_key-members.html  class_w_sql_1_1_w_sql_referenced_key.html  class_w_sql_1_1_w_sql_result-members.html  class_w_sql_1_1_w_sql_result.html  class_w_sql_1_1_w_sql_table-members.html  class_w_sql_1_1_w_sql_table.html  class_w_sql_1_1_w_sqlite_driver-members.html  class_w_sql_1_1_w_sqlite_driver.html  class_w_sql_1_1_w_sqlite_result-members.html  class_w_sql_1_1_w_sqlite_result.html  class_w_sql_1_1_worm_class_generator-members.html  class_w_sql_1_1_worm_class_generator.html  class_w_sql_1_1_worm_code_template-members.html  (+161 more)
doc/html/search/: all_5f.html  all_61.html  all_63.html  all_64.html  all_65.html  all_66.html  all_68.html  all_69.html  all_6a.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  classes_77.html  defines_64.html  defines_6d.html  defines_70.html  defines_72.html  defines_76.html  enums_64.html  enums_65.html  enums_74.html  enumvalues_61.html  enumvalues_62.html  enumvalues_63.html  enumvalues_64.html  enumvalues_65.html  enumvalues_66.html  enumvalues_69.html  enumvalues_6c.html  enumvalues_6d.html  (+41 more)
examples/: blog.db  test_wmysqlresultset.cpp  test_wsqlcolumn.cpp  test_wsqldatabase.cpp  test_wsqldatum.cpp  test_wsqlite_driver.cpp  test_wsqlresultset.cpp  worm_wt_example.cpp
src/: CMakeLists.txt  Makefile  doxygen.main.h  wormgen  wormgen.cpp
src/orm/: wormclassgenerator.cpp  wormclassgenerator.h  wormcodetemplate.cpp  wormcodetemplate.h
src/orm/templates/: class_declaration.tpl  class_declaration.tpl.varnames.h
src/orm/templates/qt/: class_declaration.tpl  class_definition.tpl
src/orm/templates/wt/dbo/: class_declaration.tpl  class_definition.tpl
src/sql/: wsql.h  wsqlcolumn.cpp  wsqlcolumn.h  wsqldabatasemanager.cpp  wsqldabatasemanager.h  wsqldatabase.cpp  wsqldatabase.h  wsqldatatype.h  wsqldatum.cpp  wsqldatum.h  wsqldriver.cpp  wsqldriver.h  wsqldriverfactory.cpp  wsqldriverfactory.h  wsqlerror.cpp  wsqlerror.h  wsqlfield.cpp  wsqlfield.h  wsqlforeignkey.cpp  wsqlforeignkey.h  wsqlrecord.cpp  wsqlrecord.h  wsqlreferencedkey.cpp  wsqlreferencedkey.h  wsqlresult.cpp  wsqlresult.h  wsqltable.cpp  wsqltable.h
src/sql/drivers/: wmysqldriver.cpp  wmysqldriver.h  wmysqlresult.cpp  wmysqlresult.h  wsqlitedriver.cpp  wsqlitedriver.h  wsqliteresult.cpp  wsqliteresult.h
